<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".startups.Login">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_app_icon_blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="Log in to continue"
            android:textColor="@color/blue"
            android:textSize="24dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="user type"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_type_dropdown"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            app:boxStrokeColor="@color/blue"
            app:endIconTint="@color/blue">

            <AutoCompleteTextView
                android:id="@+id/user_type_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false"
                android:text="Patient" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radio_grp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:checkedButton="@id/radio_mobile_login"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_mobile_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:buttonTint="@color/blue"
                android:layoutDirection="rtl"
                android:text="mobile login"
                android:textColor="@color/blue"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/radio_email_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:buttonTint="@color/blue"
                android:layoutDirection="rtl"
                android:text=" email login  " />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/mobile_login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginHorizontal="25dp"
                android:text="Mobile"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/edtMobile"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/edit_text_background"
                android:drawableEnd="@drawable/ic_call"
                android:elevation="4dp"
                android:hint="Enter mobile number"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/getOtpBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/blue"
                android:text="Get OTP"
                android:textAllCaps="false"
                app:cornerRadius="10dp"
                app:iconPadding="10dp" />

            <LinearLayout
                android:id="@+id/otp_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/otpText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginHorizontal="30dp"
                    android:text="Enter otp"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <com.poovam.pinedittextfield.SquarePinField
                    android:id="@+id/otp_edit_text"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:elevation="10dp"
                    android:inputType="numberDecimal"
                    android:textSelectHandle="@drawable/text_handle"
                    android:textSize="16sp"
                    app:cornerRadius="5dp"
                    app:distanceInBetween="9dp"
                    app:fieldBgColor="@color/white"
                    app:fieldColor="@color/black"
                    app:highlightColor="@color/blue"
                    app:highlightType="currentField"
                    app:lineThickness="2dp"
                    app:noOfFields="6" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginHorizontal="25dp"

                android:text="email"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/edit_text_background"
                android:drawableEnd="@drawable/ic_email"
                android:elevation="4dp"
                android:hint="Enter email"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="15dp"

                android:text="password"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/edit_text_background"
                android:drawableEnd="@drawable/ic_eye_open"
                android:elevation="4dp"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/email_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/blue"
                android:text="login"
                android:textAllCaps="false"
                app:cornerRadius="10dp"
                app:iconPadding="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/noaccText"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="70dp"
                android:text="Don't have an account?"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/signupText"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:layout_marginBottom="70dp"
                android:paddingLeft="7dp"
                android:text="SIGN UP"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
