...
                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/book_appointment_view"
                    android:layout_width="150dp"
                    android:layout_height="170dp"
                    android:layout_gravity="center"
                    android:layout_marginVertical="10dp"
                    app:cardBackgroundColor="@color/w1"
                    app:cardCornerRadius="20dp">
...
                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"></Space>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/update_medical_hist"
                    android:layout_width="150dp"
                    android:layout_height="170dp"
                    android:layout_gravity="center"
                    android:layout_marginVertical="10dp"
                    app:cardBackgroundColor="@color/w3"
                    app:cardCornerRadius="20dp">
...
