...
                android:layout_gravity="center"

                android:text="Upload documents related to your previous medical treatmetns"
                android:textAlignment="center" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/choose_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:backgroundTint="@color/green_1"
                android:drawableLeft="@drawable/baseline_file_picker_24"
...
